# Cave-Swallow

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: ChessBoard.hpp  Coordinate.hpp  MoveGenerator.hpp
src/: ChessBoard.cpp  MoveGenerator.cpp
